# cgen

./: .gitignore  CMakeLists.txt  README.md
cmake/: cgen-config.cmake.in
examples/: library_with_modules.toml  simple_binary.toml
include/cgen/: config_parser.h  generator.h  parser.h  placeholder_processor.h  project_generator.h  scanner.h  template_manager.h
schema/: project.toml
src/: CMakeLists.txt  generator.cppm  main.cpp
src/from-config-generation/: CMakeLists.txt  config_parser.cpp  generator.cpp  placeholder_processor.cpp  project_generator.cpp  scanner.cpp  template_manager.cpp  toml-parser.cpp
src/parser/: CMakeLists.txt  toml-parser.cppm  yaml-parser.cppm
template/: README.md  config.cmake.in.template  dependencies_cpm.cmake.template  dependencies_find.cmake.template  main.cpp.template  module.cppm.template  root_CMakeLists.txt.template  src_CMakeLists.txt.template  structure.md
template/binary/: root_CMakeLists.txt.template
template/binary/src/: CMakeLists.txt.template
template/binary_default/: root_CMakeLists.txt.template
template/binary_default/src/: main.cpp.template
template/dependencies/: find_packages.cmake.template
template/library_default/: .gitignore  root_CMakeLists.txt.template
template/package_managers/conan/: conanfile.txt.template
template/package_managers/cpm/: dependencies.cmake.template  dependency.cmake.template
template/package_managers/vcpkg/: vcpkg.json.template
templates/_common/: .gitignore  README.md
templates/_package_managers/cpm/: get_cpm.cmake.template
templates/_package_managers/xrepo/: xmake.lua
templates/binary_default/src/: CMakeLists.txt.template
templates/common/tests/: CMakeLists.txt
templates/library_default/: CMakeLists.txt  README.md
templates/library_default/src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  placeholder_processor.cpp  scanner_test.cpp
